# fluid-rpc

./: .gitignore
frpc-gui/: README.md  analysis_options.yaml  pubspec.yaml
frpc-gui/android/app/: build.gradle
frpc-gui/integration_test/: simple_test.dart
frpc-gui/ios/Runner/: Info.plist
frpc-gui/ios/Runner.xcodeproj/: project.pbxproj
frpc-gui/lib/: main.dart
frpc-gui/linux/: CMakeLists.txt  my_application.cc
frpc-gui/rust/: Cargo.toml
frpc-gui/rust/src/: frb_generated.rs
frpc-gui/rust/src/api/: mod.rs  simple.rs
frpc-gui/rust/src/api/models/: mod.rs
frpc-gui/rust/src/api/models/collection/: collection.rs
frpc-gui/rust/src/api/models/config/: app_config.rs
frpc-gui/rust/src/api/models/connection/: connection_config.rs  mod.rs  tls_type.rs
frpc-gui/rust/src/api/models/connection/tls_types/: mod.rs  tls_type_one_way.rs  tls_type_two_way.rs
frpc-gui/rust/src/api/models/descriptors/: enum_descriptor.rs  field_descriptor.rs  field_type_descriptor.rs  message_descriptor.rs  method_descriptor.rs  mod.rs  oneof_descriptor.rs  server_descriptor.rs  service_descriptor.rs
frpc-gui/rust/src/api/models/environment/: environment.rs
frpc-gui/rust/src/api/models/project/: mod.rs  project.rs  project_utilities.rs
frpc-gui/rust/src/api/models/stream_event/: mod.rs
frpc-gui/rust_builder/: pubspec.yaml
frpc-gui/windows/: CMakeLists.txt
frpc-lib/: Cargo.toml  build.rs
frpc-lib/src/: lib.rs
frpc-lib/src/invoker/: dynamic_message_codec.rs  invoker.rs  invoker_error.rs  mod.rs
frpc-lib/src/loader/: file_loader.rs  loader_error.rs  mod.rs  reflection_checker.rs  reflection_loader.rs  reflection_loader_v1.rs  reflection_loader_v1alpha.rs
frpc-lib/src/misc/: error_helper.rs  mod.rs  pretty_formatter.rs
frpc-lib/src/stream/: fluid_error.rs  fluid_message_received.rs  fluid_stream_event.rs  mod.rs
frpc-lib/tests/proto/shared/: foo.proto
frpc-test-server/: Cargo.toml  build.rs
frpc-test-server/protos/: bar.proto  foo.proto
frpc-test-server/src/: main.rs
(+100 files in other folders)
