[package]
name = "frpc-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
chrono = "0.4.38"
futures = "0.3.30"
prost = "0.13.1"
prost-reflect = { version = "0.14.0", features = ["serde"] }
prost-types = "0.13.1"
protobuf = "3.5.0"
protox = "0.7.0"
regex = "1.10.5"
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = { git = "https://github.com/hyperium/tonic", branch = "master" }
tonic-reflection = { git = "https://github.com/hyperium/tonic", branch = "master" }
