[package]
name = "frpc-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = { git = "https://github.com/hyperium/tonic", branch = "master" }
tonic-reflection = { git = "https://github.com/hyperium/tonic", branch = "master" }

[build-dependencies]
tonic-build = "0.12.1"
