[package]
name = "frpc-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
prost = "0.13.1"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.12.2" 
tonic-reflection = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
