[package]
name = "rust_lib_frpc_gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
flutter_rust_bridge = "=2.1.0"
frpc-lib = { path = "../../frpc-lib" }
futures = "0.3.30"
prost-reflect = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
